--- a/style.css
+++ b/style.css
@@ -1,68 +1,124 @@
-body{
-    margin:0;
-    padding-top:800px;
+body {
+    margin: 0;
+    padding-top: 800px;
     text-align: center;
 }
-.profile{
-    width:350px;
-    margin-bottom:50px;
-    border-radius:50% 
+
+.profile {
+    border-radius: 50%;
+
 }
-#welcome{
+
+#welcome {
+
     position: absolute;
-    height:800px;
-  color: red;
-    left:0;
-    top:0;
-    bottom:0;
-    right:0;
-    opacity:0.9;
-    background:linear-gradient(yellow 0%,coral 100%);
+    color: #FFFFFF;
+    bottom: 0;
+    background: linear-gradient(#60ebeb 0%, #27ae60 100%);
     display: table;
     width: 100%;
     height: 100%;
-    z-index:9;
+    z-index: 9;
+    
 }
-.parallax-inner{
+
+
+
+h1 {
+
+    font-size: 40px;
+    font-family: sans-serif;
+    font-weight: 300;
+
+}
+
+#name {
+    font-size: 50px;
+    line-height: 1.2;
+    font-family: 'Cinzel Decorative', cursive;
+
+}
+
+h2 {
+    font-size: 30px;
+    font-weight: 300;
+    font-family: monospace;
+}
+
+#bio {
+    font-family: 'Cinzel Decorative', cursive;
+
+    padding: 50px;
+    text-align: center;
+}
+
+.line {
+    height: 6px;
+    background-color: #000;
+    width: 70px;
+    margin: 8px auto;
+}
+
+
+p {
+    font-size: 17px;
+}
+
+.parallax-inner {
+
     display: table-cell;
     position: relative;
     text-align: center;
     vertical-align: middle;
+
 }
-p{
-  max-width: 450px;
-    margin: 25px auto;
-    font-size: 17px;
-    line-height: 1.3;
+html {
+    scroll-behavior: smooth;
 }
+.article:hover {
+    color:fuchsia;
+}
+
 .menu{
-    list-style:none;
-    font-family: sans-serif;
-    position:absolute;
-    top:10px;
-    right:30px;
+    position:fixed;
+    background:yellow;
+    width:100%;
+    margin-top:0px;
+    top:0px;
     z-index:10;
-    cursor:pointer;
+}
+a{
+    text-decoration:none;
+    color:crimson;
+    text-shadow: 2px 2px gainsboro;
 }
 .links{
-    float:left;
-    color:green;
-    padding-top:5px;
-    padding-left:9px;
-    padding-right:9px;
-    padding-bottom:5px;
-    font-family: fantasy;
+    display:inline;
+    padding-left:33px;
+    padding-right:25px;
+    font-family:serif;
     font-size:20px;
 }
 .links:hover{
-    background-color:sandybrown;
+    font-size:25px;
+    text-decoration:underline;
 }
-a{
-    text-decoration: none;   
+#writings a{
+    text-shadow:none !important;
+    text-decoration:underline ! important;
+    color:blue !important;
 }
-.article:hover{
-    color:darkcyan;    
+#contact{
+    background:firebrick;
 }
-html{
-    scroll-behavior: smooth;
+.contact_1 a{
+    color:chartreuse;
+    text-shadow:none;
 }
+.contact_1 h3{
+    display:inline;
+}
+#contact iframe{
+    width:100%;
+}
+/*ADD CSS FROM HERE */
